# mcp-server

./: .gitignore  LICENCE.md  README.md  pyproject.toml
docs/changelog/: mcp-utils.md
mcp_server/: mcp-datetime.py  mcp-utils.py
