[tool.poetry]
name = "mcp-server"
version = "0.1.0"
description = ""
authors = ["mamisoa <mamisoa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mcp = {extras = ["cli"], version = "^1.4.1"}
logging = "^0.4.9.6"
pygame = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
